# nats-object-store-not-ok

./: Cargo.toml
src/: main.rs
