[package]
name = "nak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-nats = "0.22.1"


tokio = { version = "1.21.2", features = ["full"] }
tokio-retry = "0.3"
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"
futures-sink = "0.3.25"
futures-util = "0.3.25"

log="0"
env_logger = "*"
